@@ -50,7 +50,6 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.logging.Level;
 import javax.sql.DataSource;
 import org.geotools.data.DataStore;
-import org.geotools.data.DefaultQuery;
 import org.geotools.data.DefaultTransaction;
 import org.geotools.data.FeatureStore;
 import org.geotools.data.GmlObjectStore;
@@ -61,14 +60,12 @@ import org.geotools.data.Transaction.State;
 import org.geotools.data.jdbc.FilterToSQL;
 import org.geotools.data.jdbc.FilterToSQLException;
 import org.geotools.data.jdbc.datasource.ManageableDataSource;
-import org.geotools.data.jdbc.fidmapper.FIDMapper;
 import org.geotools.data.simple.SimpleFeatureCollection;
 import org.geotools.data.simple.SimpleFeatureIterator;
 import org.geotools.data.store.ContentDataStore;
 import org.geotools.data.store.ContentEntry;
 import org.geotools.data.store.ContentFeatureSource;
 import org.geotools.data.store.ContentState;
-import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.feature.NameImpl;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.visitor.CountVisitor;
@@ -91,7 +88,6 @@ import org.opengis.feature.type.AttributeDescriptor;
 import org.opengis.feature.type.GeometryDescriptor;
 import org.opengis.feature.type.Name;
 import org.opengis.filter.Filter;
-import org.opengis.filter.FilterFactory2;
 import org.opengis.filter.Id;
 import org.opengis.filter.PropertyIsLessThanOrEqualTo;
 import org.opengis.filter.expression.BinaryExpression;
@@ -151,8 +147,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
     /** Caches the "setValue" method in various aggregate visitors */
     private static SoftValueHashMap<Class, Method> AGGREGATE_SETVALUE_CACHE =
             new SoftValueHashMap<>(1000);
-
-    private static final FilterFactory2 FF2 = CommonFactoryFinder.getFilterFactory2();
 
     /**
      * When true, record a stack trace documenting who disposed the JDBCDataStore. If dispose() is
@@ -316,17 +310,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * this method will replace it with the new one. * @param vt
      *
      * @throws IOException If the view definition is not valid
-     * @deprecated Use createVirtualTable instead
-     */
-    public void addVirtualTable(VirtualTable vtable) throws IOException {
-        createVirtualTable(vtable);
-    }
-
-    /**
-     * Adds a virtual table to the data store. If a virtual table with the same name was registered
-     * this method will replace it with the new one. * @param vt
-     *
-     * @throws IOException If the view definition is not valid
      */
     public void createVirtualTable(VirtualTable vtable) throws IOException {
         try {
@@ -347,17 +330,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      */
     public List<ConnectionLifecycleListener> getConnectionLifecycleListeners() {
         return connectionLifecycleListeners;
-    }
-
-    /**
-     * Removes and returns the specified virtual table
-     *
-     * @param name
-     * @return
-     * @deprecated Use dropVirtualTable instead
-     */
-    public VirtualTable removeVirtualTable(String name) {
-        return dropVirtualTable(name);
     }
 
     /**
@@ -662,15 +634,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         return aggregateFunctions;
     }
 
-    /** Returns the supported functions and the dialect name they map to. */
-    public Map<String, String> getSupportedFunctions() {
-        if (supportedFunctions == null) {
-            supportedFunctions = new HashMap<>();
-            dialect.registerFunctions(supportedFunctions);
-        }
-        return supportedFunctions;
-    }
-
     /**
      * Returns the java type mapped to the specified sql type.
      *
@@ -680,7 +643,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * @return The mapped java class, or <code>null</code>. if no such mapping exists.
      */
     public Class<?> getMapping(int sqlType) {
-        return getSqlTypeToClassMappings().get(new Integer(sqlType));
+        return getSqlTypeToClassMappings().get(Integer.valueOf(sqlType));
     }
 
     /**
@@ -809,7 +772,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         // check for virtual table
         if (virtualTables.containsKey(typeName.getLocalPart())) {
-            removeVirtualTable(typeName.getLocalPart());
+            dropVirtualTable(typeName.getLocalPart());
             return;
         }
 
@@ -913,7 +876,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         // load the feature
         Id filter = getFilterFactory().id(Collections.singleton(id));
-        DefaultQuery query = new DefaultQuery(featureTypeName);
+        Query query = new Query(featureTypeName);
         query.setFilter(filter);
         query.setHints(hints);
 
@@ -1025,11 +988,10 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                             escapeNamePattern(metaData, databaseSchema),
                             "%",
                             queryTypes.toArray(new String[0]));
-            if (fetchSize > 1) {
-                tables.setFetchSize(fetchSize);
-            }
-
             try {
+                if (fetchSize > 1) {
+                    tables.setFetchSize(fetchSize);
+                }
                 while (tables.next()) {
                     String schemaName = tables.getString("TABLE_SCHEM");
                     String tableName = tables.getString("TABLE_NAME");
@@ -1185,7 +1147,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
                 StringBuffer sql = new StringBuffer();
                 sql.append("SELECT ");
-                dialect.encodeColumnName(columnName, sql);
+                dialect.encodeColumnName(null, columnName, sql);
                 sql.append(" FROM ");
                 encodeTableName(tableName, sql, null);
 
@@ -1254,7 +1216,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                             escapeNamePattern(metaData, databaseSchema),
                             escapeNamePattern(metaData, tableName),
                             escapeNamePattern(metaData, columnName));
-            columns.next();
+            if (!columns.next()) {
+                throw new SQLException("Could not find metadata for column");
+            }
 
             int binding = columns.getInt("DATA_TYPE");
             Class columnType = getMapping(binding);
@@ -1266,7 +1230,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
             return columnType;
         } finally {
-            columns.close();
+            closeSafe(columns);
         }
     }
 
@@ -2129,7 +2093,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (t == Transaction.AUTO_COMMIT) {
             Connection cx = createConnection();
             try {
-                cx.setAutoCommit(true);
+                if (!cx.getAutoCommit()) {
+                    cx.setAutoCommit(true);
+                }
             } catch (SQLException e) {
                 throw (IOException) new IOException().initCause(e);
             }
@@ -2231,7 +2197,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         // more than one
         List<Object> keyValues = new ArrayList<Object>();
         for (int i = 0; i < columns.size(); i++) {
-            PrimaryKeyColumn column = columns.get(i);
             String o = dialect.getPkColumnValue(rs, columns.get(0), offset + i + 1);
             keyValues.add(o);
         }
@@ -2253,7 +2218,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * @param strict If set to true the value of the fid will be validated against the type of the
      *     key columns. If a conversion can not be made, an exception will be thrown.
      */
-    protected static List<Object> decodeFID(PrimaryKey key, String FID, boolean strict) {
+    public static List<Object> decodeFID(PrimaryKey key, String FID, boolean strict) {
         // strip off the feature type name
         if (FID.startsWith(key.getTableName() + ".")) {
             FID = FID.substring(key.getTableName().length() + 1);
@@ -2292,8 +2257,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         }
 
         // convert to the type of the key
-        // JD: usually this would be done by the dialect directly when the value
-        // actually gets set but the FIDMapper interface does not report types
         for (int i = 0; i < values.size(); i++) {
             Object value = values.get(i);
             if (value != null) {
@@ -2429,7 +2392,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 // intersect given filter with ids filter
                 filter = getFilterFactory().and(filter, lockFilter);
             }
-            Query query = new DefaultQuery(featureType.getTypeName(), filter, Query.NO_NAMES);
+            Query query = new Query(featureType.getTypeName(), filter, Query.NO_NAMES);
 
             Statement st = null;
             try {
@@ -2686,9 +2649,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("table", sql);
+        dialect.encodeColumnName(null, "table", sql);
         sql.append(",");
-        dialect.encodeColumnName("col", sql);
+        dialect.encodeColumnName(null, "col", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_RELATIONSHIP_TABLE, sql, null);
@@ -2696,7 +2659,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (table != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("table", sql);
+            dialect.encodeColumnName(null, "table", sql);
             sql.append(" = ");
             dialect.encodeValue(table, String.class, sql);
         }
@@ -2708,7 +2671,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("col", sql);
+            dialect.encodeColumnName(null, "col", sql);
             sql.append(" = ");
             dialect.encodeValue(column, String.class, sql);
         }
@@ -2730,9 +2693,9 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("table", sql);
+        dialect.encodeColumnName(null, "table", sql);
         sql.append(",");
-        dialect.encodeColumnName("col", sql);
+        dialect.encodeColumnName(null, "col", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_RELATIONSHIP_TABLE, sql, null);
@@ -2740,7 +2703,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (table != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("table", sql);
+            dialect.encodeColumnName(null, "table", sql);
             sql.append(" = ? ");
         }
 
@@ -2751,7 +2714,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("col", sql);
+            dialect.encodeColumnName(null, "col", sql);
             sql.append(" = ? ");
         }
 
@@ -2778,13 +2741,13 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("rtable", sql);
+        dialect.encodeColumnName(null, "rtable", sql);
         sql.append(",");
-        dialect.encodeColumnName("rcol", sql);
+        dialect.encodeColumnName(null, "rcol", sql);
         sql.append(", ");
-        dialect.encodeColumnName("rfid", sql);
+        dialect.encodeColumnName(null, "rfid", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_ASSOCIATION_TABLE, sql, null);
@@ -2792,7 +2755,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (fid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ");
             dialect.encodeValue(fid, String.class, sql);
         }
@@ -2813,13 +2776,13 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("rtable", sql);
+        dialect.encodeColumnName(null, "rtable", sql);
         sql.append(",");
-        dialect.encodeColumnName("rcol", sql);
+        dialect.encodeColumnName(null, "rcol", sql);
         sql.append(", ");
-        dialect.encodeColumnName("rfid", sql);
+        dialect.encodeColumnName(null, "rfid", sql);
 
         sql.append(" FROM ");
         encodeTableName(FEATURE_ASSOCIATION_TABLE, sql, null);
@@ -2827,7 +2790,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (fid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ?");
         }
 
@@ -2853,22 +2816,22 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("name", sql);
+        dialect.encodeColumnName(null, "name", sql);
         sql.append(",");
-        dialect.encodeColumnName("description", sql);
+        dialect.encodeColumnName(null, "description", sql);
         sql.append(",");
-        dialect.encodeColumnName("type", sql);
+        dialect.encodeColumnName(null, "type", sql);
         sql.append(",");
-        dialect.encodeColumnName("geometry", sql);
+        dialect.encodeColumnName(null, "geometry", sql);
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_TABLE, sql, null);
 
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ");
             dialect.encodeValue(gid, String.class, sql);
         }
@@ -2888,22 +2851,22 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("name", sql);
+        dialect.encodeColumnName(null, "name", sql);
         sql.append(",");
-        dialect.encodeColumnName("description", sql);
+        dialect.encodeColumnName(null, "description", sql);
         sql.append(",");
-        dialect.encodeColumnName("type", sql);
+        dialect.encodeColumnName(null, "type", sql);
         sql.append(",");
-        dialect.encodeColumnName("geometry", sql);
+        dialect.encodeColumnName(null, "geometry", sql);
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_TABLE, sql, null);
 
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ?");
         }
 
@@ -2928,11 +2891,11 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("mgid", sql);
+        dialect.encodeColumnName(null, "mgid", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(MULTI_GEOMETRY_TABLE, sql, null);
@@ -2940,7 +2903,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ");
             dialect.encodeValue(gid, String.class, sql);
         }
@@ -2961,11 +2924,11 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("id", sql);
+        dialect.encodeColumnName(null, "id", sql);
         sql.append(",");
-        dialect.encodeColumnName("mgid", sql);
+        dialect.encodeColumnName(null, "mgid", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(MULTI_GEOMETRY_TABLE, sql, null);
@@ -2973,7 +2936,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         if (gid != null) {
             sql.append(" WHERE ");
 
-            dialect.encodeColumnName("id", sql);
+            dialect.encodeColumnName(null, "id", sql);
             sql.append(" = ?");
         }
 
@@ -3016,20 +2979,20 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gid", sql);
+        dialect.encodeColumnName(null, "gid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gname", sql);
+        dialect.encodeColumnName(null, "gname", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_ASSOCIATION_TABLE, sql, null);
 
         if (fid != null) {
             sql.append(" WHERE ");
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ");
             dialect.encodeValue(fid, String.class, sql);
         }
@@ -3041,7 +3004,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gid", sql);
+            dialect.encodeColumnName(null, "gid", sql);
             sql.append(" = ");
             dialect.encodeValue(gid, String.class, sql);
         }
@@ -3053,7 +3016,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gname", sql);
+            dialect.encodeColumnName(null, "gname", sql);
             sql.append(" = ");
             dialect.encodeValue(gname, String.class, sql);
         }
@@ -3075,20 +3038,20 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
 
         StringBuffer sql = new StringBuffer();
         sql.append("SELECT ");
-        dialect.encodeColumnName("fid", sql);
+        dialect.encodeColumnName(null, "fid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gid", sql);
+        dialect.encodeColumnName(null, "gid", sql);
         sql.append(",");
-        dialect.encodeColumnName("gname", sql);
+        dialect.encodeColumnName(null, "gname", sql);
         sql.append(",");
-        dialect.encodeColumnName("ref", sql);
+        dialect.encodeColumnName(null, "ref", sql);
 
         sql.append(" FROM ");
         encodeTableName(GEOMETRY_ASSOCIATION_TABLE, sql, null);
 
         if (fid != null) {
             sql.append(" WHERE ");
-            dialect.encodeColumnName("fid", sql);
+            dialect.encodeColumnName(null, "fid", sql);
             sql.append(" = ? ");
         }
 
@@ -3099,7 +3062,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gid", sql);
+            dialect.encodeColumnName(null, "gid", sql);
             sql.append(" = ? ");
         }
 
@@ -3110,7 +3073,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 sql.append(" AND ");
             }
 
-            dialect.encodeColumnName("gname", sql);
+            dialect.encodeColumnName(null, "gname", sql);
             sql.append(" = ?");
         }
 
@@ -3156,7 +3119,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         // normal attributes
         for (int i = 0; i < columnNames.length; i++) {
             // the column name
-            dialect.encodeColumnName(columnNames[i], sql);
+            dialect.encodeColumnName(null, columnNames[i], sql);
             sql.append(" ");
 
             // some sql dialects require varchars to have an
@@ -3344,10 +3307,8 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      *
      * @param featureType the feature type that the query must return (may contain less attributes
      *     than the native one)
-     * @param attributes the properties queried, or {@link Query#ALL_NAMES} to gather all of them
      * @param query the query to be run. The type name and property will be ignored, as they are
      *     supposed to have been already embedded into the provided feature type
-     * @param sort sort conditions
      */
     protected String selectSQL(SimpleFeatureType featureType, Query query)
             throws IOException, SQLException {
@@ -3494,7 +3455,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         try {
             // grab the full feature type, as we might be encoding a filter
             // that uses attributes that aren't returned in the results
-            SimpleFeatureType fullSchema = getSchema(featureType.getTypeName());
             toSQL.setInline(true);
             String filterSql = toSQL.encodeToString(filter);
             int whereClauseIndex = sql.indexOf(WHERE_CLAUSE_PLACE_HOLDER);
@@ -3570,7 +3530,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      *
      * @param featureType the feature type that the query must return (may contain less attributes
      *     than the native one)
-     * @param attributes the properties queried, or {@link Query#ALL_NAMES} to gather all of them
      * @param query the query to be run. The type name and property will be ignored, as they are
      *     supposed to have been already embedded into the provided feature type
      * @param cx The database connection to be used to create the prepared statement
@@ -3900,10 +3859,6 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         return sql.toString();
     }
 
-    private Expression expressionFromAttribute(AttributeDescriptor att) {
-        return FF2.property(att.getName());
-    }
-
     protected PreparedStatement selectAggregateSQLPS(
             String function,
             Expression att,
@@ -4100,7 +4055,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * Helper method that adds a group by statement to the SQL query. If the list of group by
      * attributes is empty or NULL no group by statement is add.
      *
-     * @param attributes the group by attributes to be encoded
+     * @param groupByExpressions the group by attributes to be encoded
      * @param sql the sql query buffer
      */
     protected void encodeGroupByStatement(
@@ -4395,7 +4350,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
             }
 
             // build "colName = value"
-            dialect.encodeColumnName(attName, sql);
+            dialect.encodeColumnName(null, attName, sql);
             sql.append(" = ");
 
             if (Geometry.class.isAssignableFrom(att.getType().getBinding())) {
@@ -4455,7 +4410,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 continue;
             }
 
-            dialect.encodeColumnName(attName, sql);
+            dialect.encodeColumnName(null, attName, sql);
             sql.append(" = ");
 
             // geometries might need special treatment, delegate to the dialect
@@ -4554,67 +4509,8 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
                 throw new RuntimeException(e);
             }
 
-            FIDMapper mapper =
-                    new FIDMapper() {
-                        public String createID(
-                                Connection conn, SimpleFeature feature, Statement statement)
-                                throws IOException {
-                            return null;
-                        }
-
-                        public int getColumnCount() {
-                            return key.getColumns().size();
-                        }
-
-                        public int getColumnDecimalDigits(int colIndex) {
-                            return 0;
-                        }
-
-                        public String getColumnName(int colIndex) {
-                            return key.getColumns().get(colIndex).getName();
-                        }
-
-                        public int getColumnSize(int colIndex) {
-                            return 0;
-                        }
-
-                        public int getColumnType(int colIndex) {
-                            return 0;
-                        }
-
-                        public String getID(Object[] attributes) {
-                            return null;
-                        }
-
-                        public Object[] getPKAttributes(String FID) throws IOException {
-                            return decodeFID(key, FID, false).toArray();
-                        }
-
-                        public boolean hasAutoIncrementColumns() {
-                            return false;
-                        }
-
-                        public void initSupportStructures() {}
-
-                        public boolean isAutoIncrement(int colIndex) {
-                            return false;
-                        }
-
-                        public boolean isVolatile() {
-                            return false;
-                        }
-
-                        public boolean returnFIDColumnsAsAttributes() {
-                            return false;
-                        }
-
-                        public boolean isValid(String fid) {
-                            return true;
-                        }
-                    };
             toSQL.setFeatureType(featureType);
             toSQL.setPrimaryKey(key);
-            toSQL.setFIDMapper(mapper);
             toSQL.setDatabaseSchema(databaseSchema);
         }
 
@@ -4774,7 +4670,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * supports them
      *
      * @param sql The sql to be modified
-     * @param the query that holds the limit and offset parameters
+     * @param query the query that holds the limit and offset parameters
      */
     public void applyLimitOffset(StringBuffer sql, Query query) {
         applyLimitOffset(sql, query.getStartIndex(), query.getMaxFeatures());
@@ -4871,6 +4767,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
         }
     }
 
+    @SuppressWarnings("deprecation") // finalize is deprecated in Java 9
     protected void finalize() throws Throwable {
         if (dataSource != null) {
             LOGGER.severe(
@@ -4934,7 +4831,8 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
             Hints hints, GeometryDescriptor gatt, Hints.Key param) {
         if (hints == null) return false;
         if (hints.containsKey(param) == false) return false;
-        if (gatt.getType().getBinding() == Point.class) return false;
+        if (gatt.getType().getBinding() == Point.class && !dialect.canSimplifyPoints())
+            return false;
         return true;
     }
 
@@ -4979,7 +4877,7 @@ public final class JDBCDataStore extends ContentDataStore implements GmlObjectSt
      * Transaction#close()} will not result in corresponding calls to the provided {@link
      * Connection} object.
      *
-     * @param conn The externally managed connection
+     * @param cx The externally managed connection
      */
     public Transaction buildTransaction(Connection cx) {
         DefaultTransaction tx = new DefaultTransaction();
